<resources>
    <string name="app_name">pathways</string>
    <string name="data_scientist">Data Scientist</string>
    <string name="web_developer">Web Developer</string>
    <string name="android_developer">Android Developer</string>
    <string name="cyber_security">Cyber Security</string>
    <string name="choose_your_path">Choose Your Path</string>
    <string name="app_title">PathWays</string>
    <string name="log_out">Log Out</string>
    <string name="guide_title">Web Developer \n Guide</string>
    <string name="android_title">Android Developer \n Guide</string>
    <string name="data_scientist_title">Data Scientist \n Guide</string>
    <string name="cyber_security_title">Cyber Security \n Guide</string>
    <string name="resource">Resource</string>
    <string name="boot_camps">BootCamps</string>
    <string name="jobs">Jobs</string>
    <string name="api_key">a85bc7f7e0db41b1a8715f0e7fa5acc9</string>

    <string name="bootcamp1">App Academy</string>
    <string name="bootcamp1Desc">"Since App Academy started in 2012, we've consistently been regarded as one of the best coding bootCamps in the world by students and employers. It's no wonder we've placed over 4,500 people in jobs at over 2,000 companies!"</string>
    <string name="bootcamp1Url">https://www.appacademy.io</string>

    <string name="bootcamp2">Fullstack Academy</string>
    <string name="bootcamp2Desc">"An Advanced JavaScript School in NYC With Exceptional Career Outcomes. Become a software engineer this year. Get placed at a top tech company upon graduation"</string>
    <string name="bootcamp2Url">https://www.fullstackacademy.com</string>

    <string name="bootcamp3">Hack Reactor</string>
    <string name="bootcamp3Desc">"After our 12-week, live online coding bootcamp, you'll be what you want to be: a software engineer, fully capable of tackling unique and unfamiliar problems and building complex applications on the job."</string>
    <string name="bootcamp3Url">https://www.hackreactor.com</string>

    <string name="bootcamp4">Flatiron School</string>
    <string name="bootcamp4Desc">"Our grads have gotten jobs in software engineering, data science, cyber security, and UX/UI design — your journey starts here. Choose your career path and learning pace today with one of our immersive courses."</string>
    <string name="bootcamp4Url">https://flatironschool.com</string>

    <string name="bootcamp5">Kenzie Academy</string>
    <string name="bootcamp5Desc">"Kenzie Academy is collaborating with Amazon Technical Academy to launch this online Software Engineering Program with Backend Java Specialization. Graduates of the program will qualify for entry-level software engineering roles at Amazon and similar roles at other enterprise and technology employers."</string>
    <string name="bootcamp5Url">https://kenzie.snhu.edu</string>

    <string name="bootcamp6">General Assembly</string>
    <string name="bootcamp6Desc">"Be In-Demand, learn a new skill. Code, UX, Data, Marketing and Product. Part-Time and Full-Time. Award-Winning Curriculum. Financing Opportunities. Bring Ideas to Life. Advance Your Career. Learn Cutting Edge Skills. Expert-Led Training"</string>
    <string name="bootcamp6Url">https://generalassemb.ly</string>

    <string name="bootcamp7">Coding Dojo</string>
    <string name="bootcamp7Desc">"Interested in starting your new career in tech? Learn to code at one of the top coding bootCamps. Build your first website and app in a matter of weeks."</string>
    <string name="bootcamp7Url">https://www.codingdojo.com</string>

    <string name="bootcamp8">BrainStation</string>
    <string name="bootcamp8Desc">"Learn in-demand skills and launch a new career as a Web Developer with this intensive web development bootcamp."</string>
    <string name="bootcamp8Url">https://brainstation.io</string>

    <string name="bootcamp9">FreeCodeCamp</string>
    <string name="bootcamp9Desc">"Our mission: to help people learn to code for free. We accomplish this by creating thousands of videos, articles, and interactive coding lessons - all freely available to the public. We also have thousands of freeCodeCamp study groups around the world."</string>
    <string name="bootcamp9Url">https://www.freecodecamp.org</string>

    <string name="bootcamp10">Columbia Bootcamp</string>
    <string name="bootcamp10Desc">"Web development is a high-growth career track, and Columbia Engineering Coding Boot Camp teaches you the specialized skills for full stack web development."</string>
    <string name="bootcamp10Url">https://bootcamp.cvn.columbia.edu</string>

    <string name="job1">Android Developer</string>
    <string name="job1Desc">"In this role, you will utilize the ServiceNow platform to provide support to consulting and technical teams by contributing to various stages of the software development life cycle"</string>
    <string name="job1Url">https://jpmc.fa.oraclecloud.com/hcmUI/CandidateExperience/en/sites/CX_1001/requisitions/preview/210244394/?keyword=android</string>

    <string name="job2">Principal Network Engineer</string>
    <string name="job2Desc">"Bloomberg’s Network Engineering team architects, designs, builds, and automates the global network which supports Bloomberg’s products and services"</string>
    <string name="job2Url">https://careers.bloomberg.com/job/detail/91353?sd=Software+Developer%2FEngineering&amp;fd=Engineering</string>

    <string name="job3">Software Engineer II Core</string>
    <string name="job3Desc">"Google's software engineers develop the next-generation technologies that change how billions of users connect, explore, and interact with information and one another"</string>
    <string name="job3Url">https://careers.google.com/jobs/results/103789633956913862-software-engineer-ii-core/?company=Google&amp;company=Google%20Fiber&amp;company=YouTube&amp;employment_type=FULL_TIME&amp;gclid=Cj0KCQjw0PWRBhDKARIsAPKHFGht1H1V_BrYGQd0u26aA8XFy7_iF-glmaM1my5XBep38uoEtkewfxMaAgBTEALw_wcB&amp;gclsrc=aw.ds&amp;hl=en_US&amp;jlo=en_US&amp;location=United%20States&amp;q=Software%20Engineer&amp;sort_by=relevance&amp;src=Online%2FHouse%20Ads%2FBKWS_SWE</string>

    <string name="job4">Designer, Creative Content</string>
    <string name="job4Desc">"We’re in a transformational time at Meta as we’ve defined a bold company vision, and continue to reimagine what work at Meta looks like in a hybrid world. It requires a reimagining of many People (HR) programs and initiatives that play a large part of a person’s everyday experience at Meta"</string>
    <string name="job4Url">https://www.metacareers.com/jobs/504030894578978/?rx_campaign=indeed0&amp;rx_group=115136&amp;rx_job=a1K2K000008TcTCUA0_5c157a62&amp;rx_r=none&amp;rx_source=Indeed&amp;rx_ts=20220325T160012Z&amp;utm_campaign=Job%2Bboard&amp;utm_medium=jobs&amp;utm_source=indeed&amp;rx_p=IAJRYSAOC9&amp;rx_viewer=040be1e8ac6311ecb516d923998fa38de680a090331e47b2ac9731149c43ec9d</string>

<!--    <string name="job5">Android Developer</string>-->
<!--    <string name="job5Desc">"In this role, you will utilize the ServiceNow platform to provide support to consulting and technical teams by contributing to various stages of the software development life cycle"</string>-->
<!--    <string name="job5Url">https://jpmc.fa.oraclecloud.com/hcmUI/CandidateExperience/en/sites/CX_1001/requisitions/preview/210244394/?keyword=android</string>-->

<!--    <string name="job6">Android Developer</string>-->
<!--    <string name="job6Desc">"In this role, you will utilize the ServiceNow platform to provide support to consulting and technical teams by contributing to various stages of the software development life cycle"</string>-->
<!--    <string name="job6Url">https://jpmc.fa.oraclecloud.com/hcmUI/CandidateExperience/en/sites/CX_1001/requisitions/preview/210244394/?keyword=android</string>-->

</resources>