<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="#2196F3">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="173dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="177dp"
        android:fontFamily="serif"
        android:text="@string/app_title"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="142dp"
        android:layout_marginTop="68dp"
        android:layout_marginEnd="142dp"
        android:text="@string/choose_your_path"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/button"
        android:layout_width="222dp"
        android:layout_height="53dp"
        android:layout_marginStart="94dp"
        android:layout_marginTop="86dp"
        android:layout_marginEnd="95dp"
        android:backgroundTint="#F3C849"
        android:text="@string/web_developer"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Button
        android:id="@+id/button4"
        android:layout_width="222dp"
        android:layout_height="53dp"
        android:layout_marginStart="94dp"
        android:layout_marginTop="23dp"
        android:layout_marginEnd="95dp"
        android:backgroundTint="#F44336"
        android:text="@string/cyber_security"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button3" />

    <Button
        android:id="@+id/button2"
        android:layout_width="222dp"
        android:layout_height="53dp"
        android:layout_marginStart="94dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="95dp"
        android:backgroundTint="#01CAB7"
        android:text="@string/android_developer"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <Button
        android:id="@+id/button3"
        android:layout_width="222dp"
        android:layout_height="53dp"
        android:layout_marginStart="94dp"
        android:layout_marginTop="23dp"
        android:layout_marginEnd="95dp"
        android:backgroundTint="#2196F3"
        android:text="@string/data_scientist"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button2" />
</androidx.constraintlayout.widget.ConstraintLayout>