<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/home_background_white">

    <TextView
        android:id="@+id/PathwaysTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="173dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="177dp"
        android:fontFamily="serif"
        android:text="@string/app_title"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/PageTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="142dp"
        android:layout_marginTop="68dp"
        android:layout_marginEnd="142dp"
        android:text="@string/choose_your_path"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/PathwaysTitle" />

    <Button
        android:id="@+id/WebDeveloperBtn"
        android:layout_width="222dp"
        android:layout_height="53dp"
        android:layout_marginStart="94dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="95dp"
        android:backgroundTint="#F3C849"
        android:text="@string/web_developer"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/PageTitle" />

    <Button
        android:id="@+id/CyberSecurityBtn"
        android:layout_width="222dp"
        android:layout_height="53dp"
        android:layout_marginStart="94dp"
        android:layout_marginTop="23dp"
        android:layout_marginEnd="95dp"
        android:backgroundTint="#F44336"
        android:text="@string/cyber_security"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/DataScientistBtn" />

    <Button
        android:id="@+id/AndroidDeveloperBtn"
        android:layout_width="222dp"
        android:layout_height="53dp"
        android:layout_marginStart="94dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="95dp"
        android:backgroundTint="#01CAB7"
        android:text="@string/android_developer"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/WebDeveloperBtn" />

    <Button
        android:id="@+id/DataScientistBtn"
        android:layout_width="222dp"
        android:layout_height="53dp"
        android:layout_marginStart="94dp"
        android:layout_marginTop="23dp"
        android:layout_marginEnd="95dp"
        android:backgroundTint="#2196F3"
        android:text="@string/data_scientist"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AndroidDeveloperBtn" />

    <TextView
        android:id="@+id/fragment_loggedin_loggedInUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="114dp"
        android:gravity="center_horizontal"
        android:textAlignment="center"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/fragment_loggedin_logOut"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/CyberSecurityBtn"
        tools:visibility="invisible" />

    <Button
        android:id="@+id/fragment_loggedin_logOut"
        android:layout_width="90dp"
        android:layout_height="48dp"
        android:layout_marginStart="156dp"
        android:layout_marginEnd="157dp"
        android:layout_marginBottom="4dp"
        android:text="@string/log_out"
        android:textSize="11sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>