<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="#2196F3">

    <TextView
        android:id="@+id/PathwaysTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="173dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="177dp"
        android:fontFamily="serif"
        android:text="@string/app_title"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/GuideTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="142dp"
        android:layout_marginTop="68dp"
        android:layout_marginEnd="142dp"
        android:text="@string/data_scientist_title"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/PathwaysTitle" />

    <Button
        android:id="@+id/ResourcesBtn"
        android:layout_width="222dp"
        android:layout_height="70dp"
        android:layout_marginStart="94dp"
        android:layout_marginTop="86dp"
        android:layout_marginEnd="95dp"
        android:backgroundTint="#4981F3"
        android:text="@string/resource"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/GuideTitle" />

    <Button
        android:id="@+id/BootcampBtn"
        android:layout_width="222dp"
        android:layout_height="70dp"
        android:layout_marginStart="94dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="95dp"
        android:backgroundTint="#4981F3"
        android:text="@string/boot_camps"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ResourcesBtn" />

    <Button
        android:id="@+id/JobsBtn"
        android:layout_width="222dp"
        android:layout_height="70dp"
        android:layout_marginStart="94dp"
        android:layout_marginTop="23dp"
        android:layout_marginEnd="95dp"
        android:backgroundTint="#4981F3"
        android:text="@string/jobs"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/BootcampBtn" />

    <TextView
        android:id="@+id/fragment_loggedin_loggedInUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/fragment_loggedin_logOut"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.974"
        tools:layout_editor_absoluteX="-142dp" />

    <Button
        android:id="@+id/fragment_loggedin_logOut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="156dp"
        android:layout_marginEnd="157dp"
        android:layout_marginBottom="4dp"
        android:text="@string/log_out"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>